--- a/templates/seek/about.html
+++ b/templates/seek/about.html
@@ -9,23 +9,14 @@
     <div class="container">
         <h1 class="font-weight-semibold">About Us </h1>
         <div class="para">
-            <p class="font-weight-normal text-muted pb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Laudantium, corporis enim maxime distinctio ullam nulla, molestiae beatae fugit nesciunt, nemo voluptas
-                optio delectus dicta voluptate ipsa natus quae debitis. Veniam at dolores assumenda eligendi, deleniti,
-                impedit aperiam voluptas voluptate debitis expedita rerum alias sapiente quod quis ducimus magni sed dolore
-                consequuntur neque. Doloribus quae mollitia eveniet aut reprehenderit corporis neque pariatur molestiae
-                voluptate obcaecati delectus, omnis inventore natus reiciendis nam nesciunt qui, facilis, cupiditate fugit
-                quo veniam. Accusamus, voluptatem, tenetur quidem saepe laudantium autem, dolores odio excepturi neque alias
-                corporis tempora architecto soluta labore quod? Molestias aliquam consequatur voluptatum odio laudantium
-                soluta nobis blanditiis commodi, repudiandae iusto placeat quis, cumque, esse quia dicta. Repellat sunt
-                dolorem pariatur eveniet quasi facere voluptatum eaque, mollitia ea provident aliquam, ipsa quaerat numquam
-                blanditiis distinctio hic non totam cum quis ducimus delectus quo. Facere vitae sequi, nemo voluptas
-                repellendus accusamus quam omnis consequatur suscipit fuga temporibus iusto nesciunt ut doloribus veniam?
-                Quia excepturi pariatur repudiandae nam odio rerum, laboriosam quisquam ipsum. Beatae at libero rem ullam
-                expedita aliquid? Sit nulla consequatur vitae quas repellat. Ducimus eveniet corrupti nihil at, explicabo
-                ipsam dolores quo architecto eum animi et ut assumenda odit quam nesciunt qui, maxime esse facilis
-                distinctio aperiam dolorem amet expedita excepturi unde. Dicta, optio? Dolorem, illum fugit vitae dolor
-                sequi soluta cum qui, eum doloribus magnam placeat? Suscipit facere, incidunt omnis, sequi quia possimus
+            <p class="font-weight-normal text-muted pb-3">
+                Welcome to Seek, where you can search for people using
+                images. Our advanced image recognition and search technology makes it easy to find information about
+                individuals by uploading an image or entering the image's URL. Whether you're trying to reconnect with
+                an old friend, identify someone in a photo, or learn more about a celebrity, our web app has you
+                covered. With a vast database of images, our web app is an essential tool for anyone looking to find
+                information about people using images. Try it out today and see how easy it is to find the people you're
+                looking for.
             </p>
         </div>
     </div>
