--- a/templates/seek/face_search.html
+++ b/templates/seek/face_search.html
@@ -1,5 +1,5 @@
 {% extends "seek/base.html" %}
-{% block title %} Image {% endblock %}
+{% block title %} Face Recognition {% endblock %}
 {% block content %}
 
 {% load static %}
@@ -16,8 +16,8 @@
             <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                 <div class="card border-0 shadow rounded-3 my-5">
                     <div class="card-body p-4 p-sm-5">
-                        <h5 class="card-title text-center mb-5 fw-light fs-5">Search Data Using image</h5>
-                        <form action="{% url 'image_search' %}" method="post" id="signup">
+                        <h5 class="card-title text-center mb-5 fw-light fs-5">Search Data Using Face Recognition</h5>
+                        <form action="{% url 'face_search' %}" method="post" id="signup">
                             {% csrf_token %}
                             <div>
                                 <label for="formFileLg" class="form-label">Add image</label>
