--- a/templates/seek/base.html
+++ b/templates/seek/base.html
@@ -57,6 +57,10 @@
                         </li>
 
                         <li class="nav-item">
+                            <a class="nav-link" href="{% url 'face_search' %}">Face</a>
+                        </li>
+
+                        <li class="nav-item">
                             <a class="nav-link" href="">Nid</a>
                         </li>
 
