--- a/templates/seek/base.html
+++ b/templates/seek/base.html
@@ -52,9 +52,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'about' %}">About</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="{% url 'image_search' %}">Image</a>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'face_search' %}">Face</a>
