--- a/templates/seek/index.html
+++ b/templates/seek/index.html
@@ -16,7 +16,7 @@
       information about people using images. Try it out today and see how easy it is to find the people you're
       looking for. </h6>
     <div>
-      <a href="{% url 'image_search' %}"><button class="btn btn-opacity-light mr-1">Get started</button></a>
+      <a href="{% url 'face_search' %}"><button class="btn btn-opacity-light mr-1">Get started</button></a>
       <a href="{% url 'about' %}"><button class="btn btn-opacity-success ml-1">Learn more</button></a>
     </div>
     <img src="{% static 'seek/images/group.svg' %}" alt="" class="img-fluid">
