--- a/templates/seek/base.html
+++ b/templates/seek/base.html
@@ -73,7 +73,7 @@
 
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">{{request.user}} </a>
+                            <a class="nav-link" href="{% url 'profile' %}">{{request.user}} </a>
                         </li>
 
                         <li class="nav-item">
