--- a/templates/seek/base.html
+++ b/templates/seek/base.html
@@ -52,20 +52,18 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'about' %}">About</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="{% url 'image_search' %}">Image</a>
-                        </li> -->
+                       
 
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'face_search' %}">Face</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="">Nid</a>
+                            <a class="nav-link" href="{% url 'nid_search' %}">Nid</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="">Fingerprint</a>
+                            <a class="nav-link" href="{% url 'fingerprint_search' %}">Fingerprint</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'admin:index' %}">Dashboard</a>
@@ -119,24 +117,25 @@
                     <h4 class="modal-title" id="exampleModalLabel">Contact Us</h4>
                 </div>
                 <div class="modal-body">
-                    <form>
+                    <form action="{% url 'user_message' %}" method="post" id="user_message">
+                        {% csrf_token %}
                         <div class="form-group">
                             <label for="Name">Name</label>
-                            <input type="text" class="form-control" id="Name" placeholder="Name">
+                            <input type="text" class="form-control" id="Name" name="name" placeholder="Name" required>
                         </div>
                         <div class="form-group">
                             <label for="Email">Email</label>
-                            <input type="email" class="form-control" id="Email-1" placeholder="Email">
+                            <input type="email" class="form-control" id="Email-1" name="email" placeholder="Email" required>
                         </div>
                         <div class="form-group">
                             <label for="Message">Message</label>
-                            <textarea class="form-control" id="Message" placeholder="Enter your Message"></textarea>
+                            <textarea class="form-control" id="Message" name="message" placeholder="Enter your Message" required></textarea>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-success">Submit</button>
+                    <button type="submit" form="user_message" class="btn btn-success">Submit</button>
                 </div>
             </div>
         </div>
